Proper heights for pie chart popups.

--- a/css/sass/_base.sass
+++ b/css/sass/_base.sass
@@ -639,7 +639,7 @@ input[type=radio]
   top: 7%
   left: 50%
   width: 700px
-  height: 83%
+  height: 755px
   z-index: 99
   overflow: hidden
   @include box-shadow(0 0 35px rgba(0, 0, 0, .75))
@@ -714,7 +714,7 @@ input[type=radio]
     z-index: 2
 
 .live_pie-gender-content
-  height: 70%
+  height: 620px
 
   iframe.pie_container
     margin: 2em auto 0 auto
