Fixed link on ch5.

--- a/css/sass/_chapter5.sass
+++ b/css/sass/_chapter5.sass
@@ -109,7 +109,7 @@
         @include transition(color .2s)
 
   .ask_details a.big,
-  .three_steps a
+  .three_steps li > a
     background-color: $green
     color: #fff
     display: inline-block
