fix catastrophic chrome bug

--- a/css/sass/_base.sass
+++ b/css/sass/_base.sass
@@ -11,6 +11,12 @@ a
   &:hover
     color: $link-color-hover
 
+.chromefix .chromefix
+  background-attachment: scroll !important
+
+
+
+
 input
   margin: 0
 
